[project]
name = "sample-project"
version = "0.1.0"
description = "This is a sample project"
authors = [{ name = "Althaf Muhammad" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.6.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
]
